# unidb

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  LESSONS.md  MEMORY.md  PROGRESS.md  README.md  a1_after.err
.claude/: settings.json
benches/: btree.rs  bulk_build.rs  checkpoint.rs  conc_matrix.rs  concurrent_writers.rs  decompose.rs  durable_index.rs  fpi.rs  graph.rs  load.rs  phase6_ops.rs  poll_events.rs  queue.rs  scale.rs  server.rs  tpch.rs  vacuum.rs  vector.rs  vector_recall.rs
doc/: README.md  REST_API.md
docker/: Dockerfile  Dockerfile.server  README.md  docker-compose.minio.yml  docker-compose.yml  entrypoint.sh  fair_fsync_benchmark.md
docs/: README.md  REST_API.md  documentation_index.md  engine_access_guide.md  ops_runbook.md  positioning.md
docs/backlog/: 100_dev_login_whoami.md  101_group_commit.md  102_index_only_scan.md  103_authz_v2_studio_integration_gaps.md  104_catalog_sync_dedup.md  105_bench_selective_carry_forward.md  106_vector_pgvector_class_tier.md  107_async_hnsw_commit_path.md  108_crud_ratio_regression_check.md  108_information_schema_follow_table_grants.md  109_parallel_btree_candidate_resolution.md  110_rls_limit_boolean_coercion_crash.md  111_information_schema_follow_table_grants.md  112_column_level_grants.md  113_fk_error_message_direction.md  114_w4_event_rung_tax.md  115_oneshot_filtered_select_fixed_cost.md  116_insert_per_row_commit_path.md  117_checkpoint_async_worker_d5_race.md  15_parallel_worker_governance.md  16_concurrent_sql_writes_visibility_anomaly.md  17_mm_replaced_stack_headline.md  18_engine_access_contract.md  19_sql_surface_gaps.md  20_events_realtime_dispatcher.md  21_observability_metrics.md  22_logs_surface.md  23_storage_service.md  24_authz_v2_policies.md  25_multipage_catalog.md  26_event_queue_scale.md  27_vacuum_per_table.md  28_replication_time_pitr_logical.md  29_subscription_cdc_envelope_lag.md  30_studio_api_readiness.md  31_storage_http_routes.md  32_bulk_load_api.md  33_cdc_management_api.md  34_observability_api_gaps.md  35_unique_constraint_full_scan.md  (+81 more)
docs/design/: README.md  design_index.md  engine_design.md  how_unidb_stores_data.md  item28_design.md  p3c_vector_spike.md  render_pdf.mjs  storage_service.md  unidb_design_architecture.html  unidb_design_architecture_context.md  unidb_engine_architecture.html  unidb_engine_architecture_context.md
docs/history/: MEMORY_ARCHIVE_2026-07.md  PROGRESS_ARCHIVE_2026-07.md
docs/performance/: README.md  benchmark_20260716_182226.md  benchmark_20260716_205244.md  benchmark_20260716_232744.md  benchmark_20260717_021445.md  benchmark_20260717_074259.md  benchmark_20260717_081246.md  benchmark_20260717_095824.md  benchmark_20260717_131201.md  buffer_pool_tuning.md  conc_matrix_20260712_165249.md  conc_matrix_20260713_041032.md  conc_matrix_20260713_045400.md  conc_matrix_20260717_152543.md  conc_matrix_20260717_152612.md  high_scale_concurrency.md  multi_model_report_20260710_143619.md  multi_model_report_20260713_041622.md  multi_model_report_20260714_190433.md  multi_model_report_20260715_091035.md  multi_model_report_20260715_092725.md  multi_model_report_20260715_221701.md  multi_model_report_20260716_005004.md  multi_model_report_20260716_030325.md  multi_model_report_20260716_075853.md  multi_model_report_20260716_095901.md  report_20260716_130011.md  (+13 more)
examples/: profile_bulk_dml.rs  verify_sql_reference.rs
loom-crabbing/: Cargo.toml
loom-crabbing/src/: lib.rs
loom-crabbing/tests/: crabbing.rs
scripts/: README.md  bench_server.sh  compare_bench.py  docker_report.sh  gen_jwt.sh  lint_backlog.sh  lint_docs.sh  mm_resource_report.py  multi_model_report.sh  pg_compare.sh  promote_bench.sh  report.sh  scripts_guide.md  stitch_baseline.py
src/: autovacuum.rs  btree_index.rs  bufferpool.rs  catalog.rs  checkpoint.rs  concurrency_hooks.rs  control.rs  csr_index.rs  disk_vector.rs  error.rs  format.rs  fulltext.rs  heap.rs  hnsw_index.rs  index_worker.rs  large_object.rs  lib.rs  lockmgr.rs  metrics.rs  mmap.rs  mvcc.rs  observability.rs  page.rs  query_limits.rs  read_handle.rs  recovery.rs  stats_ticker.rs  storage_api.rs  txn.rs  vector.rs  wal.rs
tests/: a3_gate.rs  aggregate.rs  authz.rs  authz_z1z3z5.rs  authz_z6_current_user.rs  btree_mvcc.rs  concurrent_reads.rs  concurrent_writers.rs  constraints.rs  delete_probe.rs  delete_scan_diagnostic.rs  explain.rs  graph_adjacency_cache_cypher.rs  graph_locking.rs  graph_mvcc.rs  graph_rebuild.rs  index_rebuild.rs  information_schema.rs  item100_auth_endpoints.rs  item101_group_commit.rs  item102_index_only_scan.rs  item102b_covering_index.rs  item103_authz_bypass.rs  item110_rls_limit.rs  item111_infoschema_grants.rs  item19_cast.rs  item19_derived_tables.rs  item19_full_outer_join.rs  item19_natural_join.rs  item19_sql_gaps.rs  item19_subquery_predicates.rs  item19_window_functions.rs  item24_rls_with_check.rs  item24_z2_per_op_policies.rs  item24_z4_role_members.rs  item38_param_coercion.rs  item51_hash_join_phase_b.rs  item67_async_hnsw.rs  item68_hint_bits.rs  item69_fill_factor.rs  (+53 more)
unidb-attach/: Cargo.toml
unidb-attach/benches/: attach.rs
unidb-attach/src/: lib.rs
unidb-attach/tests/: attach_crud.rs  attach_extras.rs  attach_graph.rs  attach_sql.rs
unidb-attach/tests/attach_common/: mod.rs
unidb-dispatch/: Cargo.toml
unidb-dispatch/src/: dlq.rs  filter.rs  lib.rs  sink.rs
unidb-dispatch/tests/: dispatch_delivery.rs  dispatch_throughput.rs  dispatch_webhook_dlq.rs
unidb-embed/: Cargo.toml  README.md
unidb-embed/src/: embed.rs  main.rs  sql.rs
unidb-logical/: Cargo.toml
unidb-logical/src/: apply.rs  lib.rs
unidb-logical/tests/: logical_replication.rs
unidb-server-full/: Cargo.toml
unidb-server-full/src/: main.rs
unidb-storage/: Cargo.toml  README.md
unidb-storage/src/: api_impl.rs  config.rs  lib.rs  metadata.rs  outbox.rs  reconcile.rs  service.rs
unidb-storage/src/store/: memory.rs  mod.rs  s3.rs
unidb-storage/tests/: crash_consistency.rs  outbox_dispatcher.rs  presign_and_config.rs  round_trip.rs  scale.rs
unidb-storage/tests/common/: mod.rs
(+67 files in other folders)
