[package]
name = "unidb"
version = "0.1.0"
edition = "2021"

[dependencies]
memmap2 = "0.9"
crc32fast = "1.4"
zerocopy = { version = "0.7", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlparser = "0.62.0"
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }
instant-distance = "0.6.1"

# M5: optional server (src/server/, src/bin/unidb-server.rs). All gated
# behind the `server` feature so a default `cargo build`/`cargo test` never
# pulls in an async runtime — "the engine stays sync" (CLAUDE.md) is
# literally true for the default embedded build, not just true when the
# feature happens to be off.
tokio = { version = "1.52", optional = true, features = ["sync", "rt", "rt-multi-thread", "net", "macros", "time", "signal"] }
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.7", optional = true, features = ["trace", "cors", "timeout"] }
jsonwebtoken = { version = "10", optional = true, default-features = false, features = ["aws_lc_rs"] }
metrics = { version = "0.24", optional = true }
metrics-exporter-prometheus = { version = "0.18", optional = true, default-features = false }
axum-prometheus = { version = "0.10", optional = true }
async-stream = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }

[features]
server = [
    "dep:tokio", "dep:axum", "dep:tower", "dep:tower-http",
    "dep:jsonwebtoken", "dep:metrics", "dep:metrics-exporter-prometheus",
    "dep:axum-prometheus", "dep:async-stream", "dep:futures-util",
]

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
reqwest = { version = "0.12", features = ["json"] }

[[bin]]
name = "unidb-server"
path = "src/bin/unidb-server.rs"
required-features = ["server"]

[[bench]]
name = "load"
harness = false

[[bench]]
name = "vector"
harness = false

[[bench]]
name = "graph"
harness = false

[[bench]]
name = "queue"
harness = false
