[workspace]
members = ["unidb-attach", "unidb-embed"]
resolver = "2"

[package]
name = "unidb"
version = "0.1.0"
edition = "2021"

[dependencies]
memmap2 = "0.9"
crc32fast = "1.4"
zerocopy = { version = "0.7", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlparser = "0.62.0"
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }
instant-distance = "0.6.1"

# M5: optional server (src/server/, src/bin/unidb-server.rs). All gated
# behind the `server` feature so a default `cargo build`/`cargo test` never
# pulls in an async runtime — "the engine stays sync" (CLAUDE.md) is
# literally true for the default embedded build, not just true when the
# feature happens to be off.
tokio = { version = "1.52", optional = true, features = ["sync", "rt", "rt-multi-thread", "net", "macros", "time", "signal"] }
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.7", optional = true, features = ["trace", "cors", "timeout"] }
jsonwebtoken = { version = "10", optional = true, default-features = false, features = ["aws_lc_rs"] }
metrics = { version = "0.24", optional = true }
metrics-exporter-prometheus = { version = "0.18", optional = true, default-features = false }
axum-prometheus = { version = "0.10", optional = true }
async-stream = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }
tracing-appender = { version = "0.2", optional = true }

[features]
server = [
    "dep:tokio", "dep:axum", "dep:tower", "dep:tower-http",
    "dep:jsonwebtoken", "dep:metrics", "dep:metrics-exporter-prometheus",
    "dep:axum-prometheus", "dep:async-stream", "dep:futures-util",
    "dep:tracing-appender",
]

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
jsonwebtoken = { version = "10", default-features = false, features = ["aws_lc_rs"] }
futures-util = "0.3"

[[bin]]
name = "unidb-server"
path = "src/bin/unidb-server.rs"
required-features = ["server"]

[[bench]]
name = "load"
harness = false

[[bench]]
name = "vector"
harness = false

[[bench]]
name = "graph"
harness = false

[[bench]]
name = "queue"
harness = false

[[bench]]
name = "btree"
harness = false

[[bench]]
name = "vacuum"
harness = false

[[bench]]
name = "fpi"
harness = false

[[bench]]
name = "server"
harness = false
required-features = ["server"]

# M5.d: server integration tests, gated the same way as the unidb-server
# binary — `tests/server_common/mod.rs` is a shared helper module, not its
# own test binary (Cargo doesn't auto-discover files in tests/ subdirectories).
[[test]]
name = "server_crud"
path = "tests/server_crud.rs"
required-features = ["server"]

[[test]]
name = "server_sql"
path = "tests/server_sql.rs"
required-features = ["server"]

[[test]]
name = "server_cypher"
path = "tests/server_cypher.rs"
required-features = ["server"]

[[test]]
name = "server_graph"
path = "tests/server_graph.rs"
required-features = ["server"]

[[test]]
name = "server_auth"
path = "tests/server_auth.rs"
required-features = ["server"]

[[test]]
name = "server_events"
path = "tests/server_events.rs"
required-features = ["server"]

[[test]]
name = "server_shutdown"
path = "tests/server_shutdown.rs"
required-features = ["server"]

[[test]]
name = "server_metrics"
path = "tests/server_metrics.rs"
required-features = ["server"]
