[workspace]
members = ["unidb-attach", "unidb-embed", "loom-crabbing", "unidb-dispatch", "unidb-storage", "unidb-logical", "unidb-server-full"]
resolver = "2"

[package]
name = "unidb"
version = "0.1.0"
edition = "2021"

[dependencies]
memmap2 = "0.9"
crc32fast = "1.4"
zerocopy = { version = "0.7", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlparser = "0.62.0"
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }
instant-distance = "0.6.1"

# M5: optional server (src/server/, src/bin/unidb-server.rs). All gated
# behind the `server` feature so a default `cargo build`/`cargo test` never
# pulls in an async runtime — "the engine stays sync" (CLAUDE.md) is
# literally true for the default embedded build, not just true when the
# feature happens to be off.
tokio = { version = "1.52", optional = true, features = ["sync", "rt", "rt-multi-thread", "net", "macros", "time", "signal"] }
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.7", optional = true, features = ["trace", "cors", "timeout"] }
jsonwebtoken = { version = "10", optional = true, default-features = false, features = ["aws_lc_rs"] }
metrics = { version = "0.24", optional = true }
metrics-exporter-prometheus = { version = "0.18", optional = true, default-features = false }
axum-prometheus = { version = "0.10", optional = true }
async-stream = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }
tracing-appender = { version = "0.2", optional = true }
# P6.f: native TLS termination for the server (rustls, no OpenSSL). Server-only.
axum-server = { version = "0.7", optional = true, features = ["tls-rustls"] }
rustls = { version = "0.23", optional = true, default-features = false, features = ["aws_lc_rs"] }
# R4: `POST /rows/batch` carries opaque row bytes as base64 in JSON. Server-only.
base64 = { version = "0.22", optional = true }

[features]
server = [
    "dep:tokio", "dep:axum", "dep:tower", "dep:tower-http",
    "dep:jsonwebtoken", "dep:metrics", "dep:metrics-exporter-prometheus",
    "dep:axum-prometheus", "dep:async-stream", "dep:futures-util",
    "dep:tracing-appender", "dep:axum-server", "dep:rustls", "dep:base64",
    # Item 22, L1: JSON-lines log formatting. Enabled only under `server` so the
    # default embedded build's `tracing-subscriber` stays minimal (the `json`
    # feature just pulls serde_json — already present — into the subscriber).
    "tracing-subscriber/json",
]

[dev-dependencies]
# Item 31: storage HTTP routes integration tests. unidb-storage depends on
# unidb, so placing it in [dependencies] would create a cycle. In dev-
# dependencies Cargo allows this cross-reference: the test binary links to
# both without a cycle in the normal-edge graph.
unidb-storage = { path = "unidb-storage" }
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
jsonwebtoken = { version = "10", default-features = false, features = ["aws_lc_rs"] }
futures-util = "0.3"
# Phase 4 differential correctness: join/aggregate/subquery results are checked
# against SQLite on the same data. `bundled` compiles its own SQLite C library
# so the tests are self-contained and reproducible in CI. Dev-dependency only —
# it never enters the engine's own dependency graph, so the "engine stays sync"
# invariant (`cargo tree -p unidb --no-default-features --edges normal`) holds.
rusqlite = { version = "0.32", features = ["bundled"] }
# P6.f: generate a self-signed cert in the TLS integration test (dev-only).
rcgen = "0.13"
# R4: encode raw row payloads in the /rows/batch integration tests (dev-only;
# the server itself gets it via the optional feature-gated dependency above).
base64 = "0.22"
# Postgres baseline comparison (benches/decompose.rs, PG_URL-gated). Sync
# client, dev-dependency ONLY (same precedent as rusqlite/reqwest) — it never
# enters the engine's normal-edge graph, so the "engine stays sync" invariant
# (`cargo tree -p unidb --no-default-features --edges normal`) still holds.
postgres = "0.19"


[[bin]]
name = "unidb-server"
path = "src/bin/unidb-server.rs"
required-features = ["server"]

[[bench]]
name = "bulk_build"
harness = false

[[bench]]
name = "phase6_ops"
harness = false

[[bench]]
name = "load"
harness = false

[[bench]]
name = "vector"
harness = false

[[bench]]
name = "graph"
harness = false

[[bench]]
name = "queue"
harness = false

[[bench]]
name = "btree"
harness = false

[[bench]]
name = "durable_index"
harness = false

[[bench]]
name = "vector_recall"
harness = false

[[bench]]
name = "vacuum"
harness = false

[[bench]]
name = "fpi"
harness = false

[[bench]]
name = "scale"
harness = false

[[bench]]
name = "concurrent_writers"
harness = false

[[bench]]
name = "conc_matrix"
harness = false

[[bench]]
name = "decompose"
harness = false

[[bench]]
name = "checkpoint"
harness = false

[[bench]]
name = "server"
harness = false
required-features = ["server"]

[[bench]]
name = "poll_events"
harness = false

[[bench]]
name = "tpch"
harness = false

# M5.d: server integration tests, gated the same way as the unidb-server
# binary — `tests/server_common/mod.rs` is a shared helper module, not its
# own test binary (Cargo doesn't auto-discover files in tests/ subdirectories).
[[test]]
name = "server_crud"
path = "tests/server_crud.rs"
required-features = ["server"]

[[test]]
name = "server_sql"
path = "tests/server_sql.rs"
required-features = ["server"]

[[test]]
name = "server_cypher"
path = "tests/server_cypher.rs"
required-features = ["server"]

[[test]]
name = "server_graph"
path = "tests/server_graph.rs"
required-features = ["server"]

[[test]]
name = "server_auth"
path = "tests/server_auth.rs"
required-features = ["server"]

[[test]]
name = "server_events"
path = "tests/server_events.rs"
required-features = ["server"]

[[test]]
name = "server_shutdown"
path = "tests/server_shutdown.rs"
required-features = ["server"]

[[test]]
name = "server_metrics"
path = "tests/server_metrics.rs"
required-features = ["server"]

[[test]]
name = "server_replication"
path = "tests/server_replication.rs"
required-features = ["server"]

[[test]]
name = "server_authz"
path = "tests/server_authz.rs"
required-features = ["server"]

[[test]]
name = "server_tls"
path = "tests/server_tls.rs"
required-features = ["server"]

[[test]]
name = "server_stats"
path = "tests/server_stats.rs"
required-features = ["server"]

[[test]]
name = "server_tables"
path = "tests/server_tables.rs"
required-features = ["server"]

[[test]]
name = "server_txn"
path = "tests/server_txn.rs"
required-features = ["server"]

[[test]]
name = "server_enrich"
path = "tests/server_enrich.rs"
required-features = ["server"]

[[test]]
name = "server_logs"
path = "tests/server_logs.rs"
required-features = ["server"]

# Item 22, L2: correlation-id proof. Uses `tracing-subscriber`'s `json`
# feature (server-only) to capture and assert the app/slow-query/audit join.
[[test]]
name = "logs_correlation"
path = "tests/logs_correlation.rs"
required-features = ["server"]

# Item 31: storage HTTP routes integration tests (Phase D).
[[test]]
name = "storage_routes"
path = "tests/storage_routes.rs"
required-features = ["server"]

# Item 32: bulk-load HTTP API integration tests.
[[test]]
name = "server_bulk"
path = "tests/server_bulk.rs"
required-features = ["server"]
