[package]
name = "unidb-attach"
version = "0.1.0"
edition = "2021"
description = "Blocking HTTP client for the UniDB REST server"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
unidb = { path = "..", features = ["server"] }
tokio = { version = "1.52", features = ["rt", "rt-multi-thread", "net", "macros", "time"] }
axum = "0.8"
tempfile = "3"
jsonwebtoken = { version = "10", default-features = false, features = ["aws_lc_rs"] }
axum-prometheus = "0.10"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "attach"
path = "benches/attach.rs"
harness = false
